<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Drone Mission Planner</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_pairBt">Pair Bluetooth</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="missions">Missions:</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="tasks">Tasks:</string>
    <string name="title_MissionsTasks">Missions&amp;Tasks</string>
    <string name="title_Map">Map</string>
    <string name="title_Control">Control</string>

    <string name="altitude">Alt:</string>
    <string name="airspeed">AirSpd:</string>
    <string name="groundspeed">GndSpd:</string>
    <string name="vario">Vario:</string>


    <string name="tracking">Tracking:</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="uploadMission">Upload Mission</string>
    <string name="activateTask">Activate Task</string>
    <string name="taskType">Task Type:</string>
    <string name="waypoint">Waypoint</string>
    <string name="bearing">Bearing</string>
    <string name="verticalTask">Vertical task</string>
    <string name="pitch">Pitch</string>
    <string name="power">Power</string>
    <string name="nextTask">Next Task</string>
    <string name="edit">Edit</string>
    <string name="missionName">Mission Name:</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="couldNotCreateMission">Could not create mission</string>
    <string name="missionNameEmpty">Please provide some name for the mission</string>
    <string name="missionNameExists">Mission with given name already exists</string>
    <string name="taskNameExists">Task with given name already exists</string>
    <string name="sureDeleteMissionsQuestion">Are you sure you want to delete mission \"%1$s\" along with its %2$d tasks?</string>
    <string name="sureDeleteTaskQuestion">Are you sure you want to remove task \"%1$s\"</string>

</resources>
