<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    tools:context="com.zapol.android.dronemissionplanner.MapFragment"
    >

    <fragment
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:name="com.google.android.gms.maps.MapFragment"
        android:id="@+id/mapFragment"
        android:layout_gravity="center"
        tools:layout="@layout/fragment_map" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/altitude"
            android:id="@+id/altTxt"
            android:layout_row="0"
            android:layout_column="0" />

        <EditText
            android:layout_width="63dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/altitude"
            android:layout_row="0"
            android:layout_column="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/vario"
            android:id="@+id/textView5"
            android:layout_row="0"
            android:layout_column="2" />

        <EditText
            android:layout_width="63dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/editText"
            android:layout_row="0"
            android:layout_column="3" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/airspeed"
            android:id="@+id/textView6"
            android:layout_row="1"
            android:layout_column="0" />

        <EditText
            android:layout_width="63dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/editText2"
            android:layout_row="1"
            android:layout_column="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/groundspeed"
            android:id="@+id/textView7"
            android:layout_row="1"
            android:layout_column="2" />

        <EditText
            android:layout_width="63dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/editText3"
            android:layout_row="1"
            android:layout_column="3" />
    </GridLayout>
</LinearLayout>
